<resources>
    <string name="app_name">Robert\'s Weather</string>
    <string name="formatted_temp">%1$s°</string>
    <string name="no_internet">No internet</string>
    <string name="open_weather_api_url">https://api.openweathermap.org/</string>
    <string name="metric_units">metric</string>
    <string name="latin_spanish_language_code">sp</string>
    <string name="api_key">ad46f66e8ad0d2391fbede79171d7c90</string>
    <string name="location_permission_required">Need Localization Permission </string>
    <string name="ok">OK</string>
    <string name="location_request_indispensable">Required Localization</string>
    <string name="request">REQUEST</string>
    <string name="permission_denied">Denied permission</string>
    <string name="open_settings">Open settings</string>
    <string name="temp_placeholder">24°</string>
    <string name="time_placeholder">15:00</string>
    <string name="main_retrofit_in_progress">Retrieving…</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="created_by">Created</string>
    <string name="dev_name">Robert</string>
    <string name="pressure">Pressure</string>
    <string name="update">Update</string>
    <string name="humidity">Humidity</string>
    <string name="logo">Personal Weather</string>
    <string name="no_location_detected">"Can access to location. Please check that location services are enabled on your device."</string>
    <string name="permission_denied_explanation">"Permission denied. Location is requiered for this app to work."</string>
    <string name="permission_rationale">"The location permission is needed for use this app."</string>
    <string name="settings">Settings</string>
    <string name="no_internet_access">No Internet Access</string>
    <string name="updated">Updated: "</string>
    <string name="sensation">Sense: "</string>
    <string name="error_ocurred">An occurred when loading data</string>
    <string name="updatedAt">Updated:</string>
    <string name="hello">Hello</string>
    <string name="canceled_action">Cancel action</string>
    <string name="title_activity_settings">Settings Activity</string>
    <string name="settings_title">Settings</string>
    <string name="measure_metric">Unit</string>
</resources>